style.css
body {
    font-family: 'Poppins', sans-serif;
    margin: 0%;
}

h1 {
    font-size: 50px;
    color: rgb(59, 59, 59);
}

h3 {
    font-size: 20px;
    color: rgb(59, 59, 59);
}

.small-size {
    font-size: 10px;
}

.color {
    color: rgb(98, 43, 226);
}

section {
    display: flex;
}

.half-width {
    width: 50%;
    padding-left: 5%;
}

.half-width img {
    width: 90%;
}

.link-button {
    color: white;
    font-weight: 700;
    text-decoration: none;
    background-color: rgb(98, 43, 226);
    padding: 10px 20px;
    border-radius: 10px;
}

.top-banner {
    background: url(images/top-bg.png);
    background-repeat: no-repeat;
    background-size: contain;

}

